# llumnix

./: .gitignore  .gitmodules  .golangci.yml  .pylintrc  Makefile  README.md  go.mod  go.sum
.github/workflows/: build-dev-base.yml  ci.yml  cleanup_cloudflare_deployments.py  cloudflare-pages-cleanup.yml  docker-build.yml  docs-build.yml  e2e-test.yml  lint.yml  local-e2e-test.yml  nightly-e2e-test.yml  pr-test.yml  trufflehog-scan.yml  ut-discovery.yml  ut-gateway-and-scheduler.yml  ut-llumnix.yml
benchmarks/: benchmark_serving.py  run_benchmark.sh
cmd/config/: config.go
cmd/gateway/: main.go
cmd/llm-gateway/: main.go
cmd/mock-llm-server/: main.go
cmd/scheduler/: main.go
container/: Dockerfile.discovery  Dockerfile.gateway  Dockerfile.scheduler  Dockerfile.vllm  Dockerfile.vllm_ce_dev  Dockerfile.vllm_dev  Dockerfile.vllm_mooncake  setup_cuda_env.sh
deploy/: group_delete.sh  group_deploy.sh  group_update.sh
deploy/base/: gateway.yaml  kustomization.yaml  monitoring.yaml  oss-pv.yaml  redis.yaml  scheduler.yaml
deploy/batch-api/: gateway.yaml  kustomization.yaml  neutral.yaml  redis.yaml  scheduler.yaml
deploy/batch-inference/: gateway.yaml
deploy/benchmark/: benchmark.yaml
deploy/etcd-discovery/: README.md  etcd.yaml  gateway.yaml  kustomization.yaml  neutral.yaml  scheduler.yaml  test_etcd_failover.sh
deploy/normal/: gateway.yaml  kustomization.yaml  normal.yaml  scheduler.yaml
deploy/observability/: llumnix-cms-dashboard.json  llumnix-component-dashboard.json  llumnix-lrs-dashboard.json  llumnix-request-dashboard.json  vllm-dashboard.json
deploy/pd/: decode.yaml  gateway.yaml  kustomization.yaml  prefill.yaml  scheduler.yaml
deploy/traffic-mirror/: README.md  gateway.yaml  kustomization.yaml  mirror-config.yaml  mirror-target.yaml  scheduler.yaml  test_traffic_mirror.sh
deploy/yaml/: gateway.yaml  kustomization.yaml  nas-pv.yaml  nas-pvc.yaml  oss-pvc.yaml
docker/: Dockerfile  build.sh
docs/: Makefile  README.md  README_zh.md  cache_aware_scheduling.md  requirements_docs.txt
docs/source/: conf.py  index.md
lib/sgl-model-gateway/: .gitignore
lib/tokenizers/: .gitignore  Cargo.toml  Makefile  README.md  go.mod  tokenizer.go  tokenizer_test.go  tokenizers.h
patches/sgl-model-gateway/: sgl_model_gateway_820e97d6.patch
patches/vllm/: vllm_v0.12.0.patch  vllm_v0.18.0.patch
pkg/batch/: reactor_test.go
pkg/cms/: cms_read_client.go  cms_read_client_test.go  cms_write_client.go  cms_write_client_test.go  instance_status_local_account.go  instance_status_local_account_test.go  redis_client.go  test_helpers_test.go
pkg/consts/: claude_code_consts.go  config_keys.go  consts.go  error.go
pkg/etcd/: client.go  mock_client.go
pkg/keepalive/: keepalive_client.go  keepalive_server.go
pkg/kvs/: hash_test.go  kvs_client_test.go  redis_cluster_client.go
pkg/llumlet/: llumlet_server.pb.go
pkg/load-balancer/: balancer.go  composite_balancer.go  round_robin_balancer_test.go  roundrobin_balancer.go  scheduler_client.go
pkg/lrs/: local_realtime_state.go  local_realtime_state_benchmark_test.go  local_realtime_state_test.go  lrs_client.go  lrs_client_test.go  request_reporter.go  request_state_tracker.go
pkg/metrics/: counter.go  gauge.go  histogram.go  label.go  latency.go  llumnix_metrics.go  metric_help.go  metric_stats.go  metrics.go  prometheus_handler.go  prometheus_handler_test.go  status_value.go
pkg/processor/: processor.go  request_anthropic_converter.go  request_completion_converter.go  request_completion_convertor.go  response_anthropic_converter.go  response_chunk_processor.go
pkg/property/: property_manager.go  property_manager_test.go
pkg/protocol/: common.go  extra_fields_test.go  openai_chat.go  openai_completion.go
pkg/redis/: client.go  mock_redis_client.go  mock_redis_client_test.go  standalone.go
pkg/resolver/: eas_resolver.go  endpoints_resolver.go  endpoints_resolver_test.go  etcd_resolver.go  etcd_resolver_test.go  msgbus_resolver.go  redis_resolver.go  redis_resolver_test.go  resolver.go  utils.go  (+1 more)
python/blade-kvt/kvtransfer/: CMakeLists.txt  kvtransfer_pybind.cpp
python/blade-kvt/kvtransfer/include/: channel.h  client.h  common.h  context.h  envcfg.h  error.h  fault_inject.h  naming.h  protocol.h  rx_stub.h  server.h  service.h  step.h  tx_stub.h
python/blade-kvt/kvtransfer/include/naming/: eas_naming.h  fake_naming.h  filesys_naming.h  shm_naming.h  tcpstore_naming.h
python/blade-kvt/kvtransfer/include/protocol/: rdma_protocol.h  tcp_channel.h
python/blade-kvt/kvtransfer/include/thrid_party/: json.h  logging.h
python/blade-kvt/kvtransfer/include/utils/: base64.h  block_queue.h  cuda_helper.h  gdr.h  http_helper.h  id_generator.h  iterator.h  semaphore.h  shm_helper.h  socket_helper.h  thread_pool.h  timer.h
python/blade-kvt/kvtransfer/src/: barex_bench.cc  channel.cpp  client.cpp  common.cpp  context.cpp  cuda_helper.cpp  eas_naming.cpp  envcfg.cpp  fault_inject.cpp  filesys_naming.cpp  gdr.cpp  http_helper.cpp  id_generator.cpp  monitor.cpp  naming.cpp  protocol.cpp  rdma_protocol.cpp  rx_stub.cpp  semaphore.cpp  server.cpp  service.cpp  shm_helper.cpp  shm_naming.cpp  socket_helper.cpp  step.cpp  tcpstore_naming.cpp  timer.cpp  tx_stub.cpp
python/blade-kvt/kvtransfer/tests/: block_queue_test.cpp  client_step_test.cu  client_test.cpp  common_test.cpp  context_test.cpp  naming_test.cpp  protocol_test.cpp  rdma_channel_test.cpp  send_stub_test.cpp  service_test.cpp  step_sync_test.cu  utils_base64_test.cpp  utils_iterator_test.cpp  utils_semaphore_test.cpp
scripts/: build_component_bin.sh  build_component_release.sh  build_discovery_release.sh  build_discovery_whl.sh  build_gw_bin.sh  build_gw_release.sh  build_llumlet_whl.sh  build_llumnix_whl.sh  build_tokenizers.sh  build_vllm_ce_dev_images.sh  build_vllm_ce_release.sh  build_vllm_ce_whl.sh  build_vllm_dev.sh  build_vllm_dev_images.sh  build_vllm_mooncake_release.sh  build_vllm_release.sh  build_vllm_whl.sh  inspect_cms_data.py  install_barex.sh  install_blade_kvt.sh  install_go.sh  lint-backend.sh
tests/: .pylintrc  README.md
(+760 files in other folders)
