cmake_minimum_required(VERSION 3.16)
set(CMAKE_CUDA_ARCHITECTURES 80 86 90)
project(kvtransfer LANGUAGES CXX CUDA)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ggdb -lrt")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -ggdb -lrt")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra -Wshadow")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror -Wall -Wextra -Wshadow")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused -Wno-unused-parameter")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused -Wno-unused-parameter ")

option(BUILD_RDMA "build RDMA(accl-barex) transfer" ON)
option(BUILD_TESTS "build and run unit tests" OFF)
if (BUILD_TESTS)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
endif ()
option(BUILD_PYTHON_BIND "build interface expose to python" OFF)
option(ENABLE_BATCH_COPY "enable CUDA batch copy (cudaMemcpyBatchAsync)" OFF)
option(USE_PYBIND11 "build pybind use pybind11 or use torch extension" OFF)
option(CURL_REQUIRED "build with libcurl dependency" ON)
set(FIND_INCLUDE_PATHS "/usr/include" "/usr/include/x86_64-linux-gnu" "/usr/local/include")
set(FIND_LIBRARY_PATHS "/usr/lib/" "/usr/lib/x86_64-linux-gnu/" "/usr/local/lib/")

find_package(CUDAToolkit)
set(TARGET_INCLUDE_DIRS include ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
set(TARGET_LINK_LIBS pthread CUDA::cudart z)

if (BUILD_RDMA)
    find_library(ACCL_BAREX_LIBRARY accl_barex PATHS ${FIND_LIBRARY_PATHS} ENV ACCL_BAREX_INSTALL_PATH REQUIRED)
    if (ACCL_BAREX_LIBRARY)
        message(STATUS "find accl_barex library at ${ACCL_BAREX_LIBRARY}")
        add_compile_definitions(ENABLE_RDMA)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCMAKE_INCLUDE")
        list(APPEND TARGET_LINK_LIBS ${ACCL_BAREX_LIBRARY})
        find_path(ACCL_BAREX_INCLUDE accl PATHS ${FIND_INCLUDE_PATHS} ENV ACCL_BAREX_INSTALL_PATH)
        if (ACCL_BAREX_INCLUDE)
            message(STATUS "include accl barex from ${ACCL_BAREX_INCLUDE}/accl")
            list(APPEND TARGET_INCLUDE_DIRS ${ACCL_BAREX_INCLUDE})
        endif ()
    endif ()
endif ()

# Enable CUDA batch copy if requested and supported
if (ENABLE_BATCH_COPY)
    message(STATUS "ENABLE_BATCH_COPY is ON, enabling CUDA batch copy support")
    add_compile_definitions(ENABLE_BATCH_COPY)
else()
    message(STATUS "ENABLE_BATCH_COPY is OFF, CUDA batch copy will not be compiled")
endif ()


find_package(Torch QUIET)
if (TORCH_FOUND)
    message(STATUS "Add include ${TORCH_INCLUDE_DIRS}")
    message(STATUS "Add lib ${TORCH_LIBRARIES}")
    message(STATUS "Add flags ${TORCH_CXX_FLAGS}")
    message(STATUS "torch install prefix: ${TORCH_INSTALL_PREFIX}")
    find_library(Torch_Python_Lib torch_python PATHS "${TORCH_INSTALL_PREFIX}/lib" REQUIRED)
    message(STATUS "torch python lib: ${Torch_Python_Lib}")
    add_compile_definitions(ENABLE_TORCH)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
    list(APPEND TARGET_INCLUDE_DIRS ${TORCH_INCLUDE_DIRS})
    list(APPEND TARGET_LINK_LIBS ${TORCH_LIBRARIES}  ${Torch_Python_Lib})
else ()
    message(STATUS "Torch package not found")
endif ()

find_library(CURL_LIBRARIES curl PATHS ${FIND_LIBRARY_PATHS})
if (CURL_LIBRARIES)
    message(STATUS "find libcurl at ${CURL_LIBRARIES}")
    list(APPEND TARGET_LINK_LIBS ${CURL_LIBRARIES})
    add_compile_definitions(ENABLE_CURL)
elseif (CURL_REQUIRED)
    message(STATUS "libcurl not found, try to fetch from website ...")
    include(FetchContent)
    FetchContent_Declare(curl
            URL https://curl.se/download/curl-8.10.0.tar.gz
            DOWNLOAD_EXTRACT_TIMESTAMP true
    )
    FetchContent_Populate(curl)
    if (NOT curl_POPULATED)
        message(FATAL_ERROR "libcurl failed to populated")
    endif ()
    add_compile_definitions(HAVE_POSIX_STRERROR_R)
    add_subdirectory(${curl_SOURCE_DIR} ${curl_BINARY_DIR})
    list(APPEND TARGET_LINK_LIBS libcurl_shared)
    add_compile_definitions(ENABLE_CURL)
endif ()

file(GLOB_RECURSE SRCS CONFIGURE_DEPENDS src/*.cpp)

find_package (Python3 COMPONENTS Interpreter Development)
list(APPEND TARGET_INCLUDE_DIRS ${Python3_INCLUDE_DIRS})
list(APPEND TARGET_LINK_LIBS ${TORCH_PYTHON_LIBRARY} ${Python3_LIBRARIES})
message(STATUS "Python3: ${Python3_INCLUDE_DIRS} ${Python3_LIBRARIES}")

if (BUILD_PYTHON_BIND)
    set(TARGET_SUFFIX "" CACHE STRING "target suffix used when build python extension not use pybind11.")
    if (USE_PYBIND11 OR NOT TORCH_FOUND)
        set(PYBIND11_FINDPYTHON ON)
        find_package(pybind11 CONFIG REQUIRED)
        if (pybind11_FOUND)
            message(STATUS "use pybind11 to compile python bind...")
            pybind11_add_module(kvtransfer_ops ${SRCS} kvtransfer_pybind.cpp)
        else ()
            message(FATAL_ERROR "can't build python bind because pybind11 not found")
        endif ()
    elseif (TORCH_FOUND)
        message(STATUS "use torch extension to compile python bind;")
        add_library(kvtransfer_ops SHARED ${SRCS} kvtransfer_pybind.cpp)
        if (TARGET_SUFFIX)
            message(STATUS "build python extension as kvtransfer_ops.${TARGET_SUFFIX}.so")
            set_target_properties(kvtransfer_ops PROPERTIES PREFIX "" SUFFIX ".${TARGET_SUFFIX}.so")
        endif ()
    else ()
        message(FATAL_ERROR "can't build python bind because neither torch nor pybind11 found")
    endif ()
    list(REMOVE_DUPLICATES TARGET_INCLUDE_DIRS)
    target_include_directories(kvtransfer_ops PRIVATE ${TARGET_INCLUDE_DIRS})
    target_link_libraries(kvtransfer_ops PUBLIC ${TARGET_LINK_LIBS})
else ()
    add_library(kvtransfer SHARED ${SRCS})
    target_compile_features(kvtransfer PUBLIC cxx_std_17)

    list(REMOVE_DUPLICATES TARGET_INCLUDE_DIRS)
    target_include_directories(kvtransfer PUBLIC ${TARGET_INCLUDE_DIRS})
    target_link_libraries(kvtransfer PUBLIC ${TARGET_LINK_LIBS})

    if (BUILD_TESTS)
        enable_testing()
        include(FetchContent)
        FetchContent_Declare(
                googletest
                GIT_REPOSITORY https://github.com/google/googletest.git
                GIT_TAG        b514bdc898e2951020cbdca1304b75f5950d1f59 # release-1.15.2
        )
        FetchContent_MakeAvailable(googletest)
        file(GLOB_RECURSE TESTS CONFIGURE_DEPENDS tests/*.cpp tests/*.cu)
        add_executable(kv_transfer_test ${TESTS})
        target_compile_features(kv_transfer_test PUBLIC cxx_std_17)
        target_include_directories(kv_transfer_test PUBLIC ${TARGET_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS})
        set(TEST_LINK_LIBS ${TARGET_LINK_LIBS} ${GTEST_BOTH_LIBRARIES} GTest::gmock GTest::gmock_main kvtransfer)
        target_link_libraries(kv_transfer_test PUBLIC ${TEST_LINK_LIBS})
        set_target_properties(kv_transfer_test PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
        include(GoogleTest)
        gtest_discover_tests(kv_transfer_test DISCOVERY_MODE PRE_TEST)
    endif ()
endif ()
